--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -32,13 +32,15 @@
             background: white;
         }
     </style>
+ 
+
 
 }
 
 
 @section scripts{
 
-
+   
     <script>
         $(document).ready(function () {
             jQuery(document).ready(function ($) {
@@ -46,7 +48,7 @@
             });
 
 
-
+         
             //$(document).ready(function () {
             //    $('#tablita').DataTable({
             //        "order": [[0, "desc"]]
@@ -57,7 +59,7 @@
         });
 
         function enviarSAP(id) {
-           
+
             var modale = $("#divProcesando");
               $.ajax({
                         type: 'GET',
@@ -73,7 +75,7 @@
                             modale.hide();
                             $('body').removeClass('modal-open');//eliminamos la clase del body para poder hacer scroll
                             $('.modal-backdrop').remove();//eliminamos el backdrop del modal
-                       
+
 
                             console.log(json);
                             if (json.procesadaSAP) {
@@ -100,7 +102,7 @@
 
                                 })
                             }
-                          
+
 
                         },
 
@@ -108,7 +110,7 @@
                       modale.modal("show");
                         },
                         complete: function () {
-                            
+
                         },
                         error: function (error) {
                             modale.hide();
@@ -119,15 +121,15 @@
         function ImprimeEtiqueta(boleta, cliente) {
             var html = '<html> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">';
             html += '<body>'
-          
+
             html += '<div class="row"> <div class="col-sm-12"> <br> </div> </div>';
           //  html += $("#idHtml2").html();
             html += ' <div class="row" style="text-align: center;">';
             html += '  <div class="col-sm-1"></div>';
             html += '  <div class="col-sm-10"> ';
 
-            html += '<h6>No. Boleta: </h6>' + '<p>'+ boleta + '</p>';
-            html += '<h6>Cliente: </h6>' + '<p>' + cliente + '</p>';
+            html +=  '<p>'+ boleta + '</p>';
+            html +=  '<p>' + cliente + '</p>';
 
             html += ' </div>';
             html += '  <div class="col-sm-1"></div>';
@@ -151,7 +153,7 @@
             html2pdf().set(opt)
                 .from(item)
                 .save("Boleta"+boleta+".pdf");
-        
+
         }
 
     </script>
@@ -199,6 +201,20 @@
 
                         <div class="col-md-4 pl-1">
 
+                          
+
+                            <div class="form-group">
+                                <label>Status</label>
+
+                                <select id="heard" class="form-control" asp-for="filtro.Codigo2">
+                                    <option value="0"> Seleccione </option>
+                                    @foreach (var item in Model.Status)
+                                    {
+                                        <option value="@item.idSAP"> @item.Nombre </option>
+                                    }
+                                </select>
+
+                            </div>
                         </div>
 
                         <div class="col-sm-12">
@@ -246,10 +262,11 @@
                             <tr>
                                 <th>ID</th>
                                 <th>No. Llamada</th>
-                                
+
                                 <th>Cliente</th>
                                 <th>Item</th>
                                 <th>Asunto</th>
+                                <th>Status</th>
 
                                 <th width="150">Acción</th>
 
@@ -261,11 +278,12 @@
                                 <tr>
                                     <td>@item.id</td>
                                     <td>@item.DocEntry</td>
-                             
+
                                     <td>@item.CardCode - @Model.Clientes.Clientes.Where(a => a.CardCode == item.CardCode).FirstOrDefault().CardName</td>
                                     <td>@item.ItemCode - @item.SerieFabricante</td>
                                     <td>@item.Asunto</td>
-
+                                    @{ var status = item.Status.ToString(); }
+                                    <td>@(Model.Status.Where(a => a.idSAP == status).FirstOrDefault() == null ? "" : Model.Status.Where(a => a.idSAP == status).FirstOrDefault().Nombre) </td>
 
                                     <td>
 
@@ -288,11 +306,12 @@
                             <tr>
                                 <th>ID</th>
                                 <th>No. Llamada</th>
-               
+
 
                                 <th>Cliente</th>
                                 <th>Item</th>
                                 <th>Asunto</th>
+                                <th>Status</th>
 
                                 <th>Acción</th>
 
